objects/DocumentType__mdt.object
<CustomObject>
    <description>Used to store configuration of different document types.</description>
    <fields>
        <fullName>FileTypeSpanish__c</fullName>
        <label>File Type(Spanish)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FileType__c</fullName>
        <label>File Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Type</label>
    <pluralLabel>Document Types</pluralLabel>
</CustomObject>